--- a/src/stories/assets/components/button/button.stories.mdx
+++ b/src/stories/assets/components/button/button.stories.mdx
@@ -1,14 +1,34 @@
-import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
-import Button from "./Button.vue";
+import {
+  Meta,
+  Story,
+  Canvas,
+  ArgsTable
+} from '@storybook/addon-docs/blocks';
+import Button from './Button.vue';
 
 <Meta
   title="MDX/Button"
   component={Button}
   argTypes={{
-    backgroundColor: { control: "color" },
+    backgroundColor: { control: 'color' },
     size: {
-      control: { type: "select", options: ["small", "large"] },
+      control: {
+        type: 'select',
+        options: ['small', 'medium', 'large']
+      }
     },
+    color: {
+      control: {
+        type: 'select',
+        options: ['base', 'primary']
+      }
+    },
+    layout: {
+      control: {
+        type: 'select',
+        options: ['flexible', 'fill', 'half']
+      }
+    }
   }}
 />
 
@@ -17,7 +37,7 @@ import Button from "./Button.vue";
 export const Template = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Button },
-  template: `<Button v-bind="$props" />`,
+  template: `<Button v-bind="$props" />`
 });
 
 ## JsxComponent Docs
@@ -32,25 +52,44 @@ Some MDX docs for the `JsxComponent` component.
   <Story
     name="small"
     args={{
-      label: "Button",
+      label: 'Button',
+      size: 'small'
     }}
   >
     >{Template.bind()}
+  </Story>
+  <Story
+    name="medium"
+    args={{
+      label: 'Button',
+      size: 'medium'
+    }}
+  >
+    {Template.bind()}
   </Story>
   <Story
     name="large"
     args={{
-      label: "Button",
-      size: "large",
+      label: 'Button',
+      size: 'large'
     }}
   >
     >{Template.bind()}
   </Story>
   <Story
+    name="primary"
+    args={{
+      label: 'Button',
+      color: 'primary'
+    }}
+  >
+    {Template.bind()}
+  </Story>
+  <Story
     name="withIcon"
     args={{
-      label: "Button",
-      icon: true,
+      label: 'Button',
+      icon: true
     }}
   >
     >{Template.bind()}
