add variations of previews

--- a/src/stories/assets/components/button/button.stories.mdx
+++ b/src/stories/assets/components/button/button.stories.mdx
@@ -94,4 +94,13 @@ Some MDX docs for the `JsxComponent` component.
   >
     >{Template.bind()}
   </Story>
+  <Story
+    name="active"
+    args={{
+      label: 'Button',
+      initState: true
+    }}
+  >
+    >{Template.bind()}
+  </Story>
 </Preview>
