update preview of mdx

--- a/src/stories/assets/components/checkbox/checkbox.stories.mdx
+++ b/src/stories/assets/components/checkbox/checkbox.stories.mdx
@@ -16,14 +16,10 @@ export const Template = (args, { argTypes }) => ({
   template: `<Checkbox v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Checkbox
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
-
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story name="checkbox">{Template.bind()}</Story>
-</Preview>
+</Canvas>
