--- a/src/stories/assets/components/decorated-icon/decorated-icon.stories.mdx
+++ b/src/stories/assets/components/decorated-icon/decorated-icon.stories.mdx
@@ -36,15 +36,11 @@ export const Template = (args, { argTypes }) => ({
   template: `<DecoratedIcon v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Decolated icon
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
-
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story name="icon-schedule">{Template.bind()}</Story>
   <Story name="icon-room" args={{ icon: 'room' }}>
     {Template.bind()}
@@ -58,4 +54,4 @@ Some MDX docs for the `JsxComponent` component.
   <Story name="icon-style" args={{ icon: 'style' }}>
     {Template.bind()}
   </Story>
-</Preview>
+</Canvas>
