--- a/src/stories/assets/components/radio-button/radio-button.stories.mdx
+++ b/src/stories/assets/components/radio-button/radio-button.stories.mdx
@@ -17,15 +17,11 @@ export const Template = (args, { argTypes }) => ({
  v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Radio button
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
-
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story
     name="radio-button"
     args={{
@@ -34,4 +30,4 @@ Some MDX docs for the `JsxComponent` component.
   >
     >{Template.bind()}
   </Story>
-</Preview>
+</Canvas>
