--- a/src/stories/assets/components/singleline-text-field/singleline-text-field.stories.mdx
+++ b/src/stories/assets/components/singleline-text-field/singleline-text-field.stories.mdx
@@ -28,16 +28,19 @@ export const Template = (args, { argTypes }) => ({
   template: `<SinglelineTextField v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Single line text field
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
+## Nomal
 
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story name="form">>{Template.bind()}</Story>
+</Canvas>
+
+## Search
+
+<Canvas>
   <Story
     name="search"
     args={{
@@ -46,4 +49,4 @@ Some MDX docs for the `JsxComponent` component.
   >
     >{Template.bind()}
   </Story>
-</Preview>
+</Canvas>
