--- a/src/stories/assets/components/button/button.stories.mdx
+++ b/src/stories/assets/components/button/button.stories.mdx
@@ -10,7 +10,6 @@ import Button from './Button.vue';
   title="MDX/Button"
   component={Button}
   argTypes={{
-    backgroundColor: { control: 'color' },
     size: {
       control: {
         type: 'select',
@@ -40,15 +39,14 @@ export const Template = (args, { argTypes }) => ({
   template: `<Button v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Button
 
-Some MDX docs for the `JsxComponent` component.
+<br />
+<br />
 
-## Wasshoi
+## inactive - base
 
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story
     name="small"
     args={{
@@ -76,8 +74,33 @@ Some MDX docs for the `JsxComponent` component.
   >
     >{Template.bind()}
   </Story>
+</Canvas>
+
+## inactive - primary
+
+<Canvas>
   <Story
-    name="primary"
+    name="primary/small"
+    args={{
+      label: 'Button',
+      size: 'small',
+      color: 'primary'
+    }}
+  >
+    {Template.bind()}
+  </Story>
+  <Story
+    name="primary/medium"
+    args={{
+      label: 'Button',
+      size: 'medium',
+      color: 'primary'
+    }}
+  >
+    {Template.bind()}
+  </Story>
+  <Story
+    name="primart/large"
     args={{
       label: 'Button',
       color: 'primary'
@@ -85,22 +108,74 @@ Some MDX docs for the `JsxComponent` component.
   >
     {Template.bind()}
   </Story>
+</Canvas>
+
+## inactive - with icon
+
+<Canvas>
   <Story
-    name="withIcon"
+    name="withIcon/small"
     args={{
       label: 'Button',
+      size: 'small',
       icon: true
     }}
   >
     >{Template.bind()}
   </Story>
   <Story
-    name="active"
+    name="withIcon/medium"
     args={{
       label: 'Button',
+      size: 'medium',
+      icon: true
+    }}
+  >
+    >{Template.bind()}
+  </Story>
+  <Story
+    name="withIcon/large"
+    args={{
+      label: 'Button',
+      size: 'large',
+      icon: true
+    }}
+  >
+    >{Template.bind()}
+  </Story>
+</Canvas>
+
+## active
+
+<Canvas>
+  <Story
+    name="active/small"
+    args={{
+      label: 'Button',
+      size: 'small',
       initState: true
     }}
   >
     >{Template.bind()}
   </Story>
-</Preview>
+  <Story
+    name="active/medium"
+    args={{
+      label: 'Button',
+      size: 'medium',
+      initState: true
+    }}
+  >
+    >{Template.bind()}
+  </Story>
+  <Story
+    name="active/large"
+    args={{
+      label: 'Button',
+      size: 'large',
+      initState: true
+    }}
+  >
+    >{Template.bind()}
+  </Story>
+</Canvas>
