--- a/src/stories/assets/components/icon-button/icon-button.stories.mdx
+++ b/src/stories/assets/components/icon-button/icon-button.stories.mdx
@@ -1,30 +1,34 @@
-import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
-import IconButton from "./IconButton.vue";
+import {
+  Meta,
+  Story,
+  Canvas,
+  ArgsTable
+} from '@storybook/addon-docs/blocks';
+import IconButton from './IconButton.vue';
 
 <Meta
   title="MDX/IconButton"
   component={IconButton}
   argTypes={{
-    backgroundColor: { control: "color" },
     icon: {
       control: {
-        type: "select",
+        type: 'select',
         options: [
-          "edit",
-          "expand_more",
-          "menu",
-          "arrow_back",
-          "more_vert",
-          "delete",
-        ],
-      },
+          'edit',
+          'expand_more',
+          'menu',
+          'arrow_back',
+          'more_vert',
+          'delete'
+        ]
+      }
     },
     size: {
-      control: { type: "select", options: ["small", "medium", "large"] },
-    },
-    color: {
-      control: { type: "select", options: ["nomal", "danger"] },
-    },
+      control: {
+        type: 'select',
+        options: ['small', 'medium', 'large']
+      }
+    }
   }}
 />
 
@@ -33,42 +37,49 @@ import IconButton from "./IconButton.vue";
 export const Template = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { IconButton },
-  template: `<IconButton v-bind="$props" />`,
+  template: `<IconButton v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Icon button
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
+## inactive
 
-# Wasshoi
-
-<Preview>
-  <Story name="small">>{Template.bind()}</Story>
+<Canvas>
+  <Story name="small" args={{ size: 'small' }}>
+    >{Template.bind()}
+  </Story>
   <Story
     name="medium"
     args={{
-      size: "medium",
+      size: 'medium'
     }}
+  >
+    >{Template.bind()}
+  </Story>
+  <Story name="large">>{Template.bind()}</Story>
+</Canvas>
+
+## active
+
+<Canvas>
+  <Story
+    name="active/small"
+    args={{ size: 'small', initState: true }}
   >
     >{Template.bind()}
   </Story>
   <Story
-    name="large"
+    name="active/medium"
     args={{
-      size: "large",
+      size: 'medium',
+      initState: true
     }}
   >
     >{Template.bind()}
   </Story>
-  <Story
-    name="danger"
-    args={{
-      size: "large",
-      color: "danger",
-    }}
-  >
+  <Story name="active/large" args={{ initState: true }}>
     >{Template.bind()}
   </Story>
-</Preview>
+</Canvas>
