--- a/src/stories/assets/components/toggle-button/toggle-button.stories.mdx
+++ b/src/stories/assets/components/toggle-button/toggle-button.stories.mdx
@@ -1,5 +1,10 @@
-import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
-import ToggleButton from "./ToggleButton.vue";
+import {
+  Meta,
+  Story,
+  Canvas,
+  ArgsTable
+} from '@storybook/addon-docs/blocks';
+import ToggleButton from './ToggleButton.vue';
 
 <Meta title="MDX/ToggleButton" component={ToggleButton} />
 
@@ -8,24 +13,20 @@ import ToggleButton from "./ToggleButton.vue";
 export const Template = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { ToggleButton },
-  template: `<ToggleButton v-bind="$props" />`,
+  template: `<ToggleButton v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Toggle button
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
-
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story
     name="toggle-button"
     args={{
-      label: "ToggleButton",
+      label: 'ToggleButton'
     }}
   >
     >{Template.bind()}
   </Story>
-</Preview>
+</Canvas>
