--- a/src/stories/assets/components/toggle-switch/toggle-switch.stories.mdx
+++ b/src/stories/assets/components/toggle-switch/toggle-switch.stories.mdx
@@ -16,17 +16,13 @@ export const Template = (args, { argTypes }) => ({
   template: `<ToggleSwitch v-bind="$props" />`
 });
 
-## JsxComponent Docs
+# Toggle switch
 
-Some MDX docs for the `JsxComponent` component.
+<br />
 
-## Wasshoi
-
-# Wasshoi
-
-<Preview>
+<Canvas>
   <Story name="active">{Template.bind()}</Story>
   <Story name="inactive" args={{ initState: false }}>
     {Template.bind()}
   </Story>
-</Preview>
+</Canvas>
