update README and rename

--- a/src/stories/assets/components/checkbox/checkbox.stories.mdx
+++ b/src/stories/assets/components/checkbox/checkbox.stories.mdx
@@ -6,7 +6,7 @@ import {
 } from '@storybook/addon-docs/blocks';
 import Checkbox from './Checkbox.vue';
 
-<Meta title="MDX/Checkbox" component={Checkbox} />
+<Meta title="Components/Checkbox" component={Checkbox} />
 
 <!-- <ArgsTable of={Checkbox} /> -->
 
