--- a/src/stories/assets/components/decorated-icon/decorated-icon.stories.mdx
+++ b/src/stories/assets/components/decorated-icon/decorated-icon.stories.mdx
@@ -7,7 +7,7 @@ import {
 import DecoratedIcon from './DecoratedIcon.vue';
 
 <Meta
-  title="MDX/DecoratedIcon"
+  title="Components/DecoratedIcon"
   component={DecoratedIcon}
   argTypes={{
     icon: {
