--- a/src/stories/assets/components/multiline-text-field/multiline-text-field.text.stories.mdx
+++ b/src/stories/assets/components/multiline-text-field/multiline-text-field.text.stories.mdx
@@ -7,7 +7,7 @@ import {
 import MultilineTextField from './MultilineTextField.vue';
 
 <Meta
-  title="MDX/MultilineTextField"
+  title="Components/MultilineTextField"
   component={MultilineTextField}
 />
 
