--- a/src/stories/assets/components/singleline-text-field/singleline-text-field.stories.mdx
+++ b/src/stories/assets/components/singleline-text-field/singleline-text-field.stories.mdx
@@ -7,7 +7,7 @@ import {
 import SinglelineTextField from './SinglelineTextField.vue';
 
 <Meta
-  title="MDX/SinglelineTextField"
+  title="Components/SinglelineTextField"
   component={SinglelineTextField}
   argTypes={{
     backgroundColor: { control: 'color' },
