--- a/src/stories/assets/components/toggle-button/toggle-button.stories.mdx
+++ b/src/stories/assets/components/toggle-button/toggle-button.stories.mdx
@@ -6,7 +6,10 @@ import {
 } from '@storybook/addon-docs/blocks';
 import ToggleButton from './ToggleButton.vue';
 
-<Meta title="MDX/ToggleButton" component={ToggleButton} />
+<Meta
+  title="Components/ToggleButton"
+  component={ToggleButton}
+/>
 
 <!-- <ArgsTable of={ToggleButton} /> -->
 
