--- a/src/stories/assets/components/toggle-switch/toggle-switch.stories.mdx
+++ b/src/stories/assets/components/toggle-switch/toggle-switch.stories.mdx
@@ -6,7 +6,10 @@ import {
 } from '@storybook/addon-docs/blocks';
 import ToggleSwitch from './ToggleSwitch.vue';
 
-<Meta title="MDX/ToggleSwitch" component={ToggleSwitch} />
+<Meta
+  title="Components/ToggleSwitch"
+  component={ToggleSwitch}
+/>
 
 <!-- <ArgsTable of={ToggleSwitch} /> -->
 
