--- a/src/stories/assets/components/button/button.stories.mdx
+++ b/src/stories/assets/components/button/button.stories.mdx
@@ -7,7 +7,7 @@ import {
 import Button from './Button.vue';
 
 <Meta
-  title="MDX/Button"
+  title="Components/Button"
   component={Button}
   argTypes={{
     size: {
