--- a/src/stories/assets/components/icon-button/icon-button.stories.mdx
+++ b/src/stories/assets/components/icon-button/icon-button.stories.mdx
@@ -7,7 +7,7 @@ import {
 import IconButton from './IconButton.vue';
 
 <Meta
-  title="MDX/IconButton"
+  title="Components/IconButton"
   component={IconButton}
   argTypes={{
     icon: {
