--- a/src/stories/assets/components/radio-button/radio-button.stories.mdx
+++ b/src/stories/assets/components/radio-button/radio-button.stories.mdx
@@ -6,7 +6,10 @@ import {
 } from '@storybook/addon-docs/blocks';
 import RadioButton from './RadioButton.vue';
 
-<Meta title="MDX/RadioButton" component={RadioButton} />
+<Meta
+  title="Components/RadioButton"
+  component={RadioButton}
+/>
 
 <!-- <ArgsTable of={RadioButton} /> -->
 
