--- a/src/stories/assets/components/button/button.stories.mdx
+++ b/src/stories/assets/components/button/button.stories.mdx
@@ -68,8 +68,7 @@ export const Template = (args, { argTypes }) => ({
   <Story
     name="large"
     args={{
-      label: 'Button',
-      size: 'large'
+      label: 'Button'
     }}
   >
     >{Template.bind()}
@@ -137,7 +136,6 @@ export const Template = (args, { argTypes }) => ({
     name="withIcon/large"
     args={{
       label: 'Button',
-      size: 'large',
       icon: true
     }}
   >
@@ -172,7 +170,6 @@ export const Template = (args, { argTypes }) => ({
     name="active/large"
     args={{
       label: 'Button',
-      size: 'large',
       initState: true
     }}
   >
